start web for app3

--- a/webapp/Pages/Index.cshtml
+++ b/webapp/Pages/Index.cshtml
@@ -16,5 +16,8 @@
         <li class="list-group-item">
             <a asp-page="bmicalculator">BMI Calculator</a>
         </li>
+        <li class="list-group-item">
+            <a asp-page="studentmarks">Student Marks</a>
+        </li>
     </ol>
 </section>
